--- a/index.html
+++ b/index.html
@@ -119,6 +119,8 @@
         </div>
 
     </div>
+    <!-- Texto "Junior Delonge" posicionado abaixo da calculadora -->
+    <h2 class="developer-text">dev @juniordelonge</h2>
 
     <script src="js/script.js"></script> <!-- Inclusão do arquivo JavaScript -->
 
